cards entrepreneur and influencer

--- a/src/app/components/entrepreneur-collaboration/entrepreneur-collaboration.component.html
+++ b/src/app/components/entrepreneur-collaboration/entrepreneur-collaboration.component.html
@@ -25,7 +25,7 @@
             <div class="isotope-box">
               <div class="isotope-item" data-type="Fashion bloggers">
                 <div class="card-container">
-                  <mat-card class="example-card">
+                  <mat-card class="example-card border border-primary border-3 rounded">
                     <mat-card-header>
                     <div mat-card-avatar class="example-header-image"></div>
                     <mat-card-title style="margin-bottom: 0px;">User name</mat-card-title>
@@ -43,7 +43,7 @@
 
               <div class="isotope-item" data-type="Foodies">
                   <div class="card-container">
-                    <mat-card class="example-card">
+                    <mat-card class="example-card border border-primary border-3 rounded">
                       <mat-card-header>
                       <div mat-card-avatar class="example-header-image"></div>
                       <mat-card-title style="margin-bottom: 0px;">User name</mat-card-title>
@@ -61,7 +61,7 @@
 
               <div class="isotope-item" data-type="gamers and technology gurus">
                 <div class="card-container">
-                  <mat-card class="example-card">
+                  <mat-card class="example-card border border-primary border-3 rounded">
                     <mat-card-header>
                     <div mat-card-avatar class="example-header-image"></div>
                     <mat-card-title style="margin-bottom: 0px;">User name</mat-card-title>
@@ -80,7 +80,7 @@
               <div class="isotope-item" data-type="Celebrities and artists">
 
                 <div class="card-container">
-                  <mat-card class="example-card">
+                  <mat-card class="example-card border border-primary border-3 rounded">
                     <mat-card-header>
                     <div mat-card-avatar class="example-header-image"></div>
                     <mat-card-title style="margin-bottom: 0px;">User name</mat-card-title>
@@ -98,7 +98,7 @@
 
               <div class="isotope-item" data-type="Fitness and healthy life">
                 <div class="card-container">
-                  <mat-card class="example-card">
+                  <mat-card class="example-card border border-primary border-3 rounded">
                     <mat-card-header>
                     <div mat-card-avatar class="example-header-image"></div>
                     <mat-card-title style="margin-bottom: 0px;">User name</mat-card-title>
@@ -116,7 +116,7 @@
 
               <div class="isotope-item card-container" data-type="Fitness and healthy life">
                 <div class="card-container">
-                  <mat-card class="example-card">
+                  <mat-card class="example-card border border-primary border-3 rounded">
                   <mat-card-header>
                     <div mat-card-avatar class="example-header-image"></div>
                     <mat-card-title style="margin-bottom: 0px;">User name</mat-card-title>
