--- a/src/app/components/influencer-collaboration/influencer-collaboration.component.html
+++ b/src/app/components/influencer-collaboration/influencer-collaboration.component.html
@@ -26,7 +26,7 @@
             <div class="isotope-box">
               <div class="isotope-item " data-type="Esthetic">
                 <div class="card-container ">
-                  <mat-card class="example-card">
+                  <mat-card class="example-card border border-primary border-3 rounded">
                     <mat-card-header>
                     <div mat-card-avatar class="example-header-image"></div>
                     <mat-card-title style="margin-bottom: 0px;">Aquí iran los nombres de perfil</mat-card-title>
@@ -44,7 +44,7 @@
 
               <div class="isotope-item" data-type="Food">
                   <div class="card-container">
-                    <mat-card class="example-card">
+                    <mat-card class="example-card border border-primary border-3 rounded">
                       <mat-card-header>
                       <div mat-card-avatar class="example-header-image"></div>
                       <mat-card-title style="margin-bottom: 0px;">Aquí iran los nombres de perfil</mat-card-title>
@@ -62,7 +62,7 @@
 
               <div class="isotope-item" data-type="Sports">
                 <div class="card-container">
-                  <mat-card class="example-card">
+                  <mat-card class="example-card border border-primary border-3 rounded">
                     <mat-card-header>
                     <div mat-card-avatar class="example-header-image"></div>
                     <mat-card-title style="margin-bottom: 0px;">Aquí iran los nombres de perfil</mat-card-title>
@@ -81,7 +81,7 @@
               <div class="isotope-item" data-type="Technology">
 
                 <div class="card-container">
-                  <mat-card class="example-card">
+                  <mat-card class="example-card border border-primary border-3 rounded">
                     <mat-card-header>
                     <div mat-card-avatar class="example-header-image"></div>
                     <mat-card-title style="margin-bottom: 0px;">Aquí iran los nombres de perfil</mat-card-title>
@@ -99,7 +99,7 @@
 
               <div class="isotope-item" data-type="Home">
                 <div class="card-container">
-                  <mat-card class="example-card">
+                  <mat-card class="example-card border border-primary border-3 rounded">
                     <mat-card-header>
                     <div mat-card-avatar class="example-header-image"></div>
                     <mat-card-title style="margin-bottom: 0px;">Aquí iran los nombres de perfil</mat-card-title>
@@ -117,7 +117,7 @@
 
               <div class="isotope-item card-container" data-type="Esthetic">
                 <div class="card-container">
-                  <mat-card class="example-card">
+                  <mat-card class="example-card border border-primary border-3 rounded">
                   <mat-card-header>
                     <div mat-card-avatar class="example-header-image"></div>
                     <mat-card-title style="margin-bottom: 0px;">Aquí iran los nombres de perfil</mat-card-title>
