--- a/src/app/show-profile/show-profile.component.html
+++ b/src/app/show-profile/show-profile.component.html
@@ -107,7 +107,7 @@
                   <div class="isotope-box">
                     <div class="isotope-item" data-type="Esthetic">
                       <div class="card-container">
-                        <mat-card class="example-card">
+                        <mat-card class="example-card border border-primary border-3 rounded">
                           <mat-card-header>
                           <div mat-card-avatar class="example-header-image"></div>
                           <mat-card-title style="margin-bottom: 0px;">Aquí iran los nombres de perfil</mat-card-title>
@@ -125,7 +125,7 @@
       
                     <div class="isotope-item" data-type="Food">
                         <div class="card-container">
-                          <mat-card class="example-card">
+                          <mat-card class="example-card border border-primary border-3 rounded">
                             <mat-card-header>
                             <div mat-card-avatar class="example-header-image"></div>
                             <mat-card-title style="margin-bottom: 0px;">Aquí iran los nombres de perfil</mat-card-title>
@@ -143,7 +143,7 @@
       
                     <div class="isotope-item" data-type="Sports">
                       <div class="card-container">
-                        <mat-card class="example-card">
+                        <mat-card class="example-card border border-primary border-3 rounded">
                           <mat-card-header>
                           <div mat-card-avatar class="example-header-image"></div>
                           <mat-card-title style="margin-bottom: 0px;">Aquí iran los nombres de perfil</mat-card-title>
@@ -162,7 +162,7 @@
                     <div class="isotope-item" data-type="Technology">
       
                       <div class="card-container">
-                        <mat-card class="example-card">
+                        <mat-card class="example-card border border-primary border-3 rounded">
                           <mat-card-header>
                           <div mat-card-avatar class="example-header-image"></div>
                           <mat-card-title style="margin-bottom: 0px;">Aquí iran los nombres de perfil</mat-card-title>
@@ -180,7 +180,7 @@
       
                     <div class="isotope-item" data-type="Home">
                       <div class="card-container">
-                        <mat-card class="example-card">
+                        <mat-card class="example-card border border-primary border-3 rounded">
                           <mat-card-header>
                           <div mat-card-avatar class="example-header-image"></div>
                           <mat-card-title style="margin-bottom: 0px;">Aquí iran los nombres de perfil</mat-card-title>
@@ -198,7 +198,7 @@
       
                     <div class="isotope-item card-container" data-type="Esthetic">
                       <div class="card-container">
-                        <mat-card class="example-card">
+                        <mat-card class="example-card border border-primary border-3 rounded">
                         <mat-card-header>
                           <div mat-card-avatar class="example-header-image"></div>
                           <mat-card-title style="margin-bottom: 0px;">Aquí iran los nombres de perfil</mat-card-title>
@@ -503,7 +503,7 @@
                   <div class="isotope-box">
                     <div class="isotope-item" data-type="Esthetic">
                       <div class="card-container">
-                        <mat-card class="example-card">
+                        <mat-card class="example-card border border-primary border-3 rounded">
                           <mat-card-header>
                           <div mat-card-avatar class="example-header-image"></div>
                           <mat-card-title style="margin-bottom: 0px;">Aquí iran los nombres de perfil</mat-card-title>
@@ -521,7 +521,7 @@
       
                     <div class="isotope-item" data-type="Food">
                         <div class="card-container">
-                          <mat-card class="example-card">
+                          <mat-card class="example-card border border-primary border-3 rounded">
                             <mat-card-header>
                             <div mat-card-avatar class="example-header-image"></div>
                             <mat-card-title style="margin-bottom: 0px;">Aquí iran los nombres de perfil</mat-card-title>
@@ -539,7 +539,7 @@
       
                     <div class="isotope-item" data-type="Sports">
                       <div class="card-container">
-                        <mat-card class="example-card">
+                        <mat-card class="example-card border border-primary border-3 rounded">
                           <mat-card-header>
                           <div mat-card-avatar class="example-header-image"></div>
                           <mat-card-title style="margin-bottom: 0px;">Aquí iran los nombres de perfil</mat-card-title>
@@ -558,7 +558,7 @@
                     <div class="isotope-item" data-type="Technology">
       
                       <div class="card-container">
-                        <mat-card class="example-card">
+                        <mat-card class="example-card border border-primary border-3 rounded">
                           <mat-card-header>
                           <div mat-card-avatar class="example-header-image"></div>
                           <mat-card-title style="margin-bottom: 0px;">Aquí iran los nombres de perfil</mat-card-title>
@@ -576,7 +576,7 @@
       
                     <div class="isotope-item" data-type="Home">
                       <div class="card-container">
-                        <mat-card class="example-card">
+                        <mat-card class="example-card border border-primary border-3 rounded">
                           <mat-card-header>
                           <div mat-card-avatar class="example-header-image"></div>
                           <mat-card-title style="margin-bottom: 0px;">Aquí iran los nombres de perfil</mat-card-title>
@@ -594,7 +594,7 @@
       
                     <div class="isotope-item card-container" data-type="Esthetic">
                       <div class="card-container">
-                        <mat-card class="example-card">
+                        <mat-card class="example-card border border-primary border-3 rounded">
                         <mat-card-header>
                           <div mat-card-avatar class="example-header-image"></div>
                           <mat-card-title style="margin-bottom: 0px;">Aquí iran los nombres de perfil</mat-card-title>
