--- a/src/app/services/main-page/main-page.component.html
+++ b/src/app/services/main-page/main-page.component.html
@@ -25,7 +25,7 @@
 	<div  class="modal-body row">
 		<div class="col-xs-12 col-sm-6 col-md-4" *ngFor="let personaje of ventures">
 			<div class="card-container">
-				<mat-card class="example-card">
+				<mat-card class="example-card border border-primary border-3 rounded">
 					<a [routerLink]="['/show-profile',personaje.id_venture]" routerLinkActive="active"><mat-card-header>
 					<div mat-card-avatar class="example-header-image"></div>
 					<mat-card-title>{{personaje.name}}</mat-card-title>
